add permissions in the manifest, change tactics.